contact page mobile bug fixes on mobile

--- a/scss/sections/contact-form.scss
+++ b/scss/sections/contact-form.scss
@@ -100,6 +100,9 @@
         &_icon{
             height: 18px;
             text-align: center;
+            img{
+                width: inherit;
+            }
         }
         &__heading{
             color: #2f4775;
